[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["gsurrel <1993113+gsurrel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"

[dependencies]
anyhow = "1.0.34"